# firefox-translations-training

./: .compute  .cron.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .taskcluster.yml  .yamllint  Dockerfile  Ftt.def  InstallSnakemakeEnvs  Makefile  README.md  Singularity.def  Snakefile  Taskfile.yml  action-input.yml  config.py  config.sh  config.test.yml  config.yml  pr-actions-test  pyproject.toml  release-push-parameters.yml  run.sh  snake-run.sh  test.py
.github/: CODEOWNERS
inference/wasm/: CMakeLists.txt  patch-artifacts-import-gemm-module.sh
inference/wasm/bindings/: bergamot-translator.d.ts  service_bindings.cpp
inference/wasm/tests/: eslint.config.mjs  package-lock.json  package.json  stub.test.js
taskcluster/: .yamllint  config.yml  pyproject.toml  requirements.in  requirements.txt
taskcluster/ci/: config.yml
taskcluster/ci/alignments/: kind.yml
taskcluster/ci/all/: kind.yml
taskcluster/ci/all-pr/: kind.yml
taskcluster/ci/bicleaner/: kind.yml
taskcluster/ci/cefilter/: kind.yml
taskcluster/ci/clean/: kind.yml
taskcluster/ci/clean-corpus/: kind.yml
taskcluster/ci/clean-mono/: kind.yml
taskcluster/ci/collect/: kind.yml
taskcluster/ci/collect-corpus/: kind.yml
taskcluster/ci/collect-mono/: kind.yml
taskcluster/ci/collect-mono-src/: kind.yml
taskcluster/ci/collect-mono-trg/: kind.yml
taskcluster/ci/dataset/: kind.yml
taskcluster/ci/docker-image/: kind.yml
taskcluster/ci/evaluate/: kind.yml
taskcluster/ci/evaluate-quantized/: kind.yml
taskcluster/ci/evaluate-teacher-ensemble/: kind.yml
taskcluster/ci/export/: kind.yml
taskcluster/ci/extract-best/: kind.yml
taskcluster/ci/fetch/: bicleaner.yml  kind.yml  python.yml  toolchains.yml
taskcluster/ci/finetune-student/: kind.yml
taskcluster/ci/finetune-teacher/: kind.yml
taskcluster/ci/hello/: kind.yml
taskcluster/ci/merge/: kind.yml
taskcluster/ci/merge-augmented/: kind.yml
taskcluster/ci/merge-corpus/: kind.yml
taskcluster/ci/merge-devset/: kind.yml
taskcluster/ci/merge-mono/: kind.yml
taskcluster/ci/merge-translated/: kind.yml
taskcluster/ci/quantize/: kind.yml
taskcluster/ci/score/: kind.yml
taskcluster/ci/split-corpus/: kind.yml
taskcluster/ci/split-mono/: kind.yml
taskcluster/ci/split-mono-src/: kind.yml
taskcluster/ci/split-mono-trg/: kind.yml
taskcluster/ci/tests/: kind.yml
taskcluster/ci/toolchain/: kind.yml
taskcluster/ci/train/: kind.yml
taskcluster/ci/train-backwards/: kind.yml
taskcluster/ci/train-student/: kind.yml
taskcluster/ci/train-teacher/: kind.yml
taskcluster/ci/train-vocab/: kind.yml
taskcluster/ci/translate-corpus/: kind.yml
taskcluster/ci/translate-mono/: kind.yml
taskcluster/ci/translate-mono-src/: kind.yml
taskcluster/ci/translate-mono-trg/: kind.yml
taskcluster/configs/: config.ci.yml  config.prod.yml
taskcluster/docker/base/: Dockerfile
taskcluster/docker/inference/: Dockerfile  intel-mkl.list
taskcluster/docker/test/: Dockerfile
taskcluster/docker/testing/: Dockerfile
taskcluster/docker/toolchain-build/: Dockerfile
taskcluster/docker/train/: Dockerfile
taskcluster/kinds/alignments/: kind.yml
taskcluster/kinds/alignments-backtranslated/: kind.yml
taskcluster/kinds/alignments-original/: kind.yml
taskcluster/kinds/alignments-priors/: kind.yml
taskcluster/kinds/alignments-priors2/: kind.yml
taskcluster/kinds/alignments-student/: kind.yml
taskcluster/kinds/alignments-teacher/: kind.yml
taskcluster/kinds/all/: kind.yml
taskcluster/kinds/all-pipeline/: kind.yml
taskcluster/kinds/all-pr/: kind.yml
taskcluster/kinds/all-pr-pipeline/: kind.yml
taskcluster/kinds/analyze-corpus/: kind.yml
taskcluster/kinds/analyze-mono/: kind.yml
taskcluster/kinds/beetmover/: kind.yml
taskcluster/kinds/bicleaner/: kind.yml
taskcluster/kinds/bicleaner-model/: kind.yml
taskcluster/kinds/bicleaner-taskgraph-merge/: kind.yml
taskcluster/kinds/cefilter/: kind.yml
taskcluster/kinds/clean-corpus/: kind.yml
taskcluster/kinds/clean-mono/: kind.yml
taskcluster/kinds/collect-corpus/: kind.yml
taskcluster/kinds/collect-mono-src/: kind.yml
taskcluster/kinds/collect-mono-trg/: kind.yml
taskcluster/kinds/dataset/: kind.yml
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/evaluate/: kind.yml
taskcluster/kinds/evaluate-quantized/: kind.yml
taskcluster/kinds/evaluate-teacher-ensemble/: kind.yml
taskcluster/kinds/export/: kind.yml
taskcluster/kinds/extract-best/: kind.yml
taskcluster/kinds/fetch/: bicleaner.yml  kind.yml  python.yml  toolchains.yml
taskcluster/kinds/finetune-student/: kind.yml
taskcluster/kinds/inference/: kind.yml
taskcluster/kinds/laser/: kind.yml
taskcluster/kinds/merge-corpus/: kind.yml
taskcluster/kinds/merge-devset/: kind.yml
taskcluster/kinds/merge-mono/: kind.yml
taskcluster/kinds/merge-translated/: kind.yml
taskcluster/kinds/modify-graph/: kind.yml
taskcluster/kinds/post-bicleaner-dummy/: kind.yml
taskcluster/kinds/preprocess/: kind.yml
taskcluster/kinds/quantize/: kind.yml
taskcluster/kinds/score/: kind.yml
taskcluster/kinds/shortlist/: kind.yml
taskcluster/kinds/split-corpus/: kind.yml
taskcluster/kinds/split-mono-src/: kind.yml
taskcluster/kinds/split-mono-trg/: kind.yml
taskcluster/kinds/tests/: kind.yml
taskcluster/kinds/toolchain/: kind.yml
taskcluster/kinds/train-backwards/: kind.yml
taskcluster/kinds/train-student/: kind.yml
taskcluster/kinds/train-teacher/: kind.yml
taskcluster/kinds/train-vocab/: kind.yml
taskcluster/kinds/translate-corpus/: kind.yml
taskcluster/kinds/translate-mono-src/: kind.yml
taskcluster/test/: conftest.py  test_default_params.py  test_target_stage.py  test_training_continuation_backwards.py  test_training_continuation_teacher.py
taskcluster/translations_taskgraph/: __init__.py  parameters.py  target_tasks.py  workertypes.py
tracking/: README.md  pyproject.toml  requirements.in  requirements.txt
tracking/requirements/: common.txt
tracking/translations_parser/: __init__.py  data.py  parser.py  publishers.py  utils.py  wandb.py
(+724 files in other folders)
