[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "translations_taskgraph"
version = "0.1.0"
description = "Translations specific code needed to generate Taskcluster tasks & graphs"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.black]
line-length = 120
target-version = ["py37"]
